parser/tests/good/string_with_max_length.st
var str1: string(6) := "string"
var str2 := "string"
var str3: string(6)
