parser/tests/bad/run_time_string_length.st
var len: int
var s: string(len)
